syntax = "proto3";
option go_package=".";

service Authorization {
  rpc Register(User) returns(SessionData) {}
  rpc LogIn(User) returns(SessionData) {}
  rpc IsAuthenticated(SessionData) returns(AuthenticatedSession) {}
  rpc ChangePassword(ChangePasswordData) returns(Null) {}
}

message User {
  string login = 1;
  string password = 2;
}

message SessionData {
  string key = 1;
}

message AuthenticatedSession {
  bool authenticated = 1;
  string login = 2;
}

message ChangePasswordData {
  string login = 1;
  string password = 2;
  string newPassword = 3;
}

message Null{

}